# PingPong-Game

./: .gitignore  Assets.cpp  Assets.hpp  Ball.cpp  Ball.hpp  CMakeLists.txt  Game.cpp  Game.hpp  Json.cpp  Json.hpp  Player.cpp  Player.hpp  SoundAssets.cpp  SoundAssets.hpp  Utils.cpp  Utils.hpp  conf.json  game  main.cpp  sudo.cpp
StateMachine/: GameOver.cpp  GameOver.hpp  InputEv.cpp  InputEv.hpp  Loading.cpp  Loading.hpp  MainMenu.cpp  MainMenu.hpp  Pause.cpp  Pause.hpp  Play.cpp  Play.hpp  Setting.cpp  Setting.hpp  State.hpp  StateManager.cpp  StateManager.hpp  StateType.hpp
data/: conf.json
include/cache/: SoundCache.hpp  TextureCache.hpp
include/cache/visuals/: MenuUI.hpp  PlayUI.hpp  SettingUI.hpp
include/engine/: GameOver.hpp  Loading.hpp  MainMenu.hpp  Pause.hpp  Play.hpp  Progressive.hpp  Setting.hpp  State.hpp  StateManager.hpp  StateType.hpp
include/engine/features/: Animated.hpp
include/engine/input/: Action.hpp  Input.hpp  InputEv.hpp  InputManager.hpp  Request.hpp
include/engine/states/: Loading.hpp  MainMenu.hpp  Pause.hpp  Play.hpp  Setting.hpp
include/entities/: Ball.hpp  Player.hpp  Utils.hpp
include/json/: Json.hpp
include/tools/: FrameRate.hpp  Json.hpp  Math.hpp  Tool.hpp
src/: main.cpp
src/cache/: Assets.cpp  SoundCache.cpp  TextureCache.cpp
src/cache/visuals/: MenuUI.cpp  PlayUI.cpp  SettingUI.cpp
src/engine/: GameOver.cpp  InputEv.cpp  Loading.cpp  MainMenu.cpp  Pause.cpp  Play.cpp  Setting.cpp  StateManager.cpp
src/engine/input/: InputManager.cpp
src/engine/states/: GameOver.cpp  Loading.cpp  MainMenu.cpp  Pause.cpp  Play.cpp  Setting.cpp
src/entities/: Ball.cpp  Player.cpp  Utils.cpp
src/json/: Json.cpp
src/tools/: FrameRate.cpp  Json.cpp  Math.cpp  Tool.cpp
